--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <canvas id="gameCanvas" width="800" height="400"></canvas>
-  <script src="script.js"></script>
+  <canvas id="canvas" width="800" height="600"></canvas>
+  <script src="game.js"></script>
 </body>
 </html>
