--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <canvas id="canvas" width="1000" height="600"></canvas>
+  <button id="restartBtn" style="display:none; position:absolute; left:50%; top:60%; transform:translate(-50%, -50%); font-size:24px;">Restartuj grę</button>
   <script src="game.js"></script>
 </body>
 </html>
