--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 <body>
   <canvas id="canvas" width="1000" height="600"></canvas>
   <button id="restartBtn" style="display:none; position:absolute; left:50%; top:60%; transform:translate(-50%, -50%); font-size:24px;">Restartuj grę</button>
-  <script src="game.js"></script>
+  <script src="game.js" defer></script>
+
+  <div id="upgradePanel" style="display:none; text-align:center; margin-top:10px;">
+    <span id="towerStats"></span>
+    <button id="upgradeBtn">Ulepsz</button>
+</div>
 </body>
 </html>
